style.css
:root {
  --main-bg: #ffffff;
  --white : white;
  --light-grey: rgb(233,233,233);
  --accent: #7aa1c3;
  --accent-dark: #4c6c88;

  --text-color: rgb(44, 44, 44);
  --text-color-faded: rgb(190, 190, 190);
  --button-color-faded: rgb(231, 231, 231);
  --answer-border-faded: rgb(243, 243, 243);

  --correct-answer-color: rgb(34, 223, 34);
  --incorrect-answer-color: red;

}

* {
  box-sizing: border-box;
}

html{
    background-color: rgb(255, 196, 196);
    user-select: none;
    height: 100%;
}

html, body {
    margin: 0;
}

body {
    background-color: var(--main-bg);
    /* font-family: 'IBM Plex Sans Hebrew', sans-serif; */
    font-family: sans-serif;
    min-height: 550px;
    height: 100%;
}

#container {
    height: 100%;
    display: flex;
    width: 550px;
    max-width: 100%;
    margin: auto;
    flex-direction: column;

    border-width: 5px;
    box-shadow: 0 0 20px 1px var(--light-grey);
}
.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#score{
    text-align: center;
    padding: .5rem 1.5rem;
    font-size: 0.8rem;
    color: var(--text-color);
}

.cog{
    width: 32px;
    height: 32px;
    margin: .5rem 1rem;
    cursor: pointer;
}

#progress-bar {
    min-height: 2px;

    width: 0%;
    background-color: var(--light-grey);
}

#question {
    direction: rtl;
    margin: 2rem 1rem;
    display: flex;
    flex: 1;
    flex-basis: 0;
    justify-content: center;
    align-items: center;
    font-size: 2.0rem;
    color: var(--text-color);
}

#answer-section {
    display: flex;
    flex: 2;
    flex-basis: 0;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#quiz-summary-section{
    display: none;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    flex: 3;
    padding: 1rem;
}

#summary-title{
    color: var(--text-color);
}

#summary-score{
    font-size: 2.5rem;
    color: var(--correct-answer-color);

}

#summary-mistakes{

}

.hide{
    visibility: hidden;
}


.answer {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    border-radius: .2em;
    border: 2px solid var(--light-grey);
    cursor: pointer;

    height: 56px;
    width: 320px;
    margin: 4px 0px;
    padding-right: 1rem;
    font-size: 1.5rem;
    color: var(--text-color);
}


.answer:hover{
    box-shadow: 0 0 10px var(--light-grey);
}

.answer.correct {
    color: var(--correct-answer-color);
    border-color: var(--correct-answer-color);
    cursor: default;
    pointer-events: none;
}

.answer.incorrect {
    color: var(--incorrect-answer-color);
    border-color: var(--incorrect-answer-color);
    cursor: default;
    pointer-events: none;
}

.answer.faded{
    color: var(--text-color-faded);
    pointer-events: none;
    border: 2px solid var(--answer-border-faded);
}

.answer-holder{
    position: relative;
    display: flex;

}

.icon{
    position: absolute;
    /* margin-left: 32px;
    margin-top: -48px;
    width: 32px; */
    z-index: 1;
    width: 32px;
    align-self: center;
    left: 16px;
}

.main-button {
    display: flex;
    justify-content: center;
    align-self: center;
    align-items: center;
    transition-duration: 0.2s;

    font-size: 1.5rem;
    min-height: 96px;
    width: 320px;
    height: 96px;
    color: var(--white);
    background-color: var(--accent);
    border-radius: 0.2em;
    margin: 24px 16px;
    cursor: pointer;
}

.main-button:hover{
    opacity: 90%;
}

.finish-button{
    background-color: var(--correct-answer-color);
}

.faded-button{
    background-color: var(--button-color-faded);
    color: var(--text-color-faded);
    pointer-events: none;
}

.next-button:hover{
    cursor: pointer;
}

.settings-overlay{
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: rgba(0, 0, 0, 0.609);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    z-index: 2;
    visibility: hidden;
}

.settings-container{

    display: flex;
    flex-direction: column;
    align-items: flex-end;

    background-color: var(--main-bg);
    border: .3rem solid var(--accent-dark);
    width: 80%;
    height: 400px;
    max-width: 500px;
    border-radius: 1rem;
    color: var(--accent-dark);
}

.settings-title-container{
    display: flex;
    justify-content:space-between;
    align-self: stretch;
    margin-bottom: 1rem;
    font-weight: bold;

    border-bottom: 1px solid var(--accent-dark);
}
.x-button{
    align-self: stretch;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 48px;
    font-size: 1.5rem;
    cursor: pointer;
}
.settings-title{
    padding: .7rem 1.5rem;
    font-size: 1.5rem;
}

.settings-category{
    margin: 1rem 1.5rem;
}

.setting{
    display: flex;
    align-items: center;
    margin: .5rem 1.5rem;
    /* background-color: red; */
}

.checkbox{
    margin-left: 1rem;
    cursor: pointer;
    height: 25px;
    width: 25px;
}


 @media only screen and (min-width: 1200px) and (min-height: 900px){
     body{
        zoom: 150%;
     }
     #container{
        min-height: 66.6666vh;
     }
 } 

 @media (prefers-color-scheme: dark) {
     :root{
    /* DARK MODEEE */
  --main-bg: rgb(39, 39, 39);
  --white : rgb(255, 255, 255);
  --light-grey: rgb(122, 122, 122);
  --accent: #435362;
  --accent-dark: #5c86ac;

  --text-color: rgb(218, 216, 216);
  --text-color-faded: rgb(100, 100, 100);
  --button-color-faded: rgb(54, 54, 54);
  --answer-border-faded: rgb(65, 65, 65);

  --correct-answer-color: rgb(34, 223, 34);
  --incorrect-answer-color: red;

     }
}


/* debug */
#debug-container {
    display: none;
    margin: auto;
    min-height: 100%;
    height: 100%;
    flex-direction: row;
}


.col {
    background-color: rgb(216, 216, 216);
    flex: 1;
    text-align: right;
    font-size: 150%;
    padding-right: 1%;
}

